[package]
name = "Spinning-Square"
version = "0.1.0"
authors = ["Youngermaster <juanmanuel12.13jmyh81@gmail.com>"]
edition = "2018"

[[bin]]
name = "Spinning-Square"

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"